--- a/contact.html
+++ b/contact.html
@@ -134,35 +134,35 @@
 
               <div class="row form-group">
                 <div class="col-md-6 mb-3 mb-md-0">
-                  <label class="text-white" for="fname">First Name</label>
-                  <input type="text" id="fname" class="form-control">
+                  <label class="text-black" for="fname">First Name</label>
+                  <input type="text" id="fname" class="form-control" style="color:#000;">
                 </div>
                 <div class="col-md-6">
-                  <label class="text-white" for="lname">Last Name</label>
-                  <input type="text" id="lname" class="form-control">
+                  <label class="text-black" for="lname">Last Name</label>
+                  <input type="text" id="lname" class="form-control" style="color:#000;">
                 </div>
               </div>
 
               <div class="row form-group">
 
                 <div class="col-md-12">
-                  <label class="text-white" for="email">Email</label> 
-                  <input type="email" id="email" class="form-control">
+                  <label class="text-black" for="email">Email</label> 
+                  <input type="email" id="email" class="form-control" style="color:#000;">
                 </div>
               </div>
 
               <div class="row form-group">
 
                 <div class="col-md-12">
-                  <label class="text-white" for="subject">Subject</label> 
-                  <input type="subject" id="subject" class="form-control">
+                  <label class="text-black" for="subject">Subject</label> 
+                  <input type="subject" id="subject" class="form-control" style="color:#000;">
                 </div>
               </div>
 
               <div class="row form-group">
                 <div class="col-md-12">
-                  <label class="text-white" for="message">Message</label> 
-                  <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Write your notes or questions here..."></textarea>
+                  <label class="text-black" for="message">Message</label> 
+                  <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Write your notes or questions here..." style="color:#000;"></textarea>
                 </div>
               </div>
 
