--- a/contact.html
+++ b/contact.html
@@ -196,7 +196,7 @@
     <div class="footer py-4">
       <div class="container-fluid text-center">
         <p>
-        Hi 
+          Copyright 2025
         </p>
       </div>
     </div>
