--- a/contact.html
+++ b/contact.html
@@ -129,13 +129,12 @@
         
         <div class="row">
           <div class="col-lg-8 mb-5">
-            <form action="#">
-
+            <form action="#" style="background:#000; padding:30px; border-radius:8px;">
 
               <div class="row form-group">
                 <div class="col-md-6 mb-3 mb-md-0">
-                  <label class="text-black" for="fname">First Name</label>
-                  <input type="text" id="fname" class="form-control" style="color:#000;">
+                  <label class="text-white" for="fname">First Name</label>
+                  <input type="text" id="fname" class="form-control" style="background:#000; color:#fff; border-color:#222;">
                 </div>
                 <div class="col-md-6">
                   <label class="text-black" for="lname">Last Name</label>
@@ -161,8 +160,8 @@
 
               <div class="row form-group">
                 <div class="col-md-12">
-                  <label class="text-black" for="message">Message</label> 
-                  <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Write your notes or questions here..." style="color:#000;"></textarea>
+                  <label class="text-white" for="message">Message</label> 
+                  <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Write your notes or questions here..." style="background:#000; color:#fff; border-color:#222;"></textarea>
                 </div>
               </div>
 
@@ -171,7 +170,6 @@
                   <input type="submit" value="Send Message" class="btn btn-primary py-2 px-4 text-white">
                 </div>
               </div>
-
 
             </form>
           </div>
