--- a/contact.html
+++ b/contact.html
@@ -129,39 +129,40 @@
         
         <div class="row">
           <div class="col-lg-8 mb-5">
-            <form action="#" style="background:#000; padding:30px; border-radius:8px;">
+            <form action="#">
+
 
               <div class="row form-group">
                 <div class="col-md-6 mb-3 mb-md-0">
                   <label class="text-white" for="fname">First Name</label>
-                  <input type="text" id="fname" class="form-control" style="background:#000; color:#fff; border-color:#222;">
+                  <input type="text" id="fname" class="form-control">
                 </div>
                 <div class="col-md-6">
-                  <label class="text-black" for="lname">Last Name</label>
-                  <input type="text" id="lname" class="form-control" style="color:#000;">
+                  <label class="text-white" for="lname">Last Name</label>
+                  <input type="text" id="lname" class="form-control">
                 </div>
               </div>
 
               <div class="row form-group">
 
                 <div class="col-md-12">
-                  <label class="text-black" for="email">Email</label> 
-                  <input type="email" id="email" class="form-control" style="color:#000;">
+                  <label class="text-white" for="email">Email</label> 
+                  <input type="email" id="email" class="form-control">
                 </div>
               </div>
 
               <div class="row form-group">
 
                 <div class="col-md-12">
-                  <label class="text-black" for="subject">Subject</label> 
-                  <input type="subject" id="subject" class="form-control" style="color:#000;">
+                  <label class="text-white" for="subject">Subject</label> 
+                  <input type="subject" id="subject" class="form-control">
                 </div>
               </div>
 
               <div class="row form-group">
                 <div class="col-md-12">
                   <label class="text-white" for="message">Message</label> 
-                  <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Write your notes or questions here..." style="background:#000; color:#fff; border-color:#222;"></textarea>
+                  <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Write your notes or questions here..."></textarea>
                 </div>
               </div>
 
@@ -170,6 +171,7 @@
                   <input type="submit" value="Send Message" class="btn btn-primary py-2 px-4 text-white">
                 </div>
               </div>
+
 
             </form>
           </div>
@@ -194,7 +196,9 @@
     <div class="footer py-4">
       <div class="container-fluid text-center">
         <p>
-          Copyright 2025
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         </p>
       </div>
     </div>
