--- a/services.html
+++ b/services.html
@@ -90,7 +90,10 @@
                   <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
                 </li>
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
+                  <a href="#" class="pl-3 pr-3"><span class="icon-pinterest"></span></a>
+                </li>
+                <li>
+                  <a href="#" class="pl-3 pr-3"><span class="icon-behance"></span></a>
                 </li>
                 <li>
                   <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
