--- a/contact.html
+++ b/contact.html
@@ -86,18 +86,21 @@
 <div class="col-6 col-xl-2 text-right" data-aos="fade-down">
 <div class="d-none d-xl-inline-block">
 <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
-<li>
-<a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-</li>
-<li>
-<a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-</li>
-<li>
-<a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-</li>
-<li>
-<a href="#" class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
-</li>
+                <li>
+                  <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                </li>
+                <li>
+                  <a href="#" class="pl-3 pr-3"><span class="icon-pinterest"></span></a>
+                </li>
+                <li>
+                  <a href="#" class="pl-3 pr-3"><span class="icon-behance"></span></a>
+                </li>
+                <li>
+                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                </li>
+                <li>
+                  <a href="#" class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
+                </li>
 </ul>
 </div>
 
