--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Nature</h2>
+              <h2 class="mb-3" style="color:#fff;">Nature</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_1.jpg" alt="Image" class="img-fluid">
@@ -131,7 +131,7 @@
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Portrait</h2>
+              <h2 class="mb-3" style="color:#fff;">Portrait</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_2.jpg" alt="Image" class="img-fluid">
@@ -140,7 +140,7 @@
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">People</h2>
+              <h2 class="mb-3" style="color:#fff;">People</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_3.jpg" alt="Image" class="img-fluid">
@@ -150,7 +150,7 @@
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Architecture</h2>
+              <h2 class="mb-3" style="color:#fff;">Architecture</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_4.jpg" alt="Image" class="img-fluid">
@@ -160,7 +160,7 @@
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Animals</h2>
+              <h2 class="mb-3" style="color:#fff;">Animals</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_5.jpg" alt="Image" class="img-fluid">
@@ -170,7 +170,7 @@
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Sports</h2>
+              <h2 class="mb-3" style="color:#fff;">Sports</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_6.jpg" alt="Image" class="img-fluid">
@@ -180,7 +180,7 @@
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3">Travel</h2>
+              <h2 class="mb-3" style="color:#fff;">Travel</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_7.jpg" alt="Image" class="img-fluid">
