--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3" style="color:#fff;">Nature</h2>
+              <h2 class="mb-3" style="color:hwb(0 0% 0%);">Nature</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_1.jpg" alt="Image" class="img-fluid">
