--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 <li class="has-children">
                   <a href="single.html">Gallery</a>
                   <ul class="dropdown">
-                    <li><a href="#">Nature</a></li>
-                    <li><a href="#">Portrait</a></li>
-                    <li><a href="#">People</a></li>
-                    <li><a href="#">Architecture</a></li>
-                    <li><a href="#">Animals</a></li>
+                    <li><a href="#">Fashion</a></li>
+                    <li><a href="#">Food</a></li>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">Pre Wedding</a></li>
+                    <li><a href="#">Wedding</a></li>
                     <li><a href="#">Sports</a></li>
                     <li><a href="#">Travel</a></li>
                     <li class="has-children">
@@ -121,7 +121,7 @@
 
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3" style="color:hwb(0 0% 0%);">Fashion</h2>
+              <h2 class="mb-3" style="color:#fff;">Fashion</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_1.jpg" alt="Image" class="img-fluid">
@@ -131,7 +131,7 @@
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3" style="color:#fff;">Portrait</h2>
+              <h2 class="mb-3" style="color:#fff;">Food</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_2.jpg" alt="Image" class="img-fluid">
@@ -140,7 +140,7 @@
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3" style="color:#fff;">People</h2>
+              <h2 class="mb-3" style="color:#fff;">Product</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_3.jpg" alt="Image" class="img-fluid">
@@ -150,7 +150,7 @@
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3" style="color:#fff;">Architecture</h2>
+              <h2 class="mb-3" style="color:#fff;">Pre Wedding</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_4.jpg" alt="Image" class="img-fluid">
@@ -160,7 +160,7 @@
         <div class="col-lg-4">
           <div class="image-wrap-2">
             <div class="image-info">
-              <h2 class="mb-3" style="color:#fff;">Animals</h2>
+              <h2 class="mb-3" style="color:#fff;">Wedding</h2>
               <a href="single.html" class="btn btn-outline-white py-2 px-4">More Photos</a>
             </div>
             <img src="images/img_5.jpg" alt="Image" class="img-fluid">
