--- a/single.html
+++ b/single.html
@@ -123,7 +123,7 @@
           <div class="col-md-7">
             <div class="row mb-5">
               <div class="col-12 ">
-                <h2 class="site-section-heading text-center">Portrait Gallery</h2>
+                <h2 class="site-section-heading text-center text-black">Portrait Gallery</h2>
               </div>
             </div>
           </div>
