--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
 <div class="col-md-7">
 <div class="row mb-5">
 <div class="col-12 ">
-<h2 class="site-section-heading text-center">Contact</h2>
+<h2 class="site-section-heading text-center text-black">Contact</h2>
 </div>
 </div>
 </div>
@@ -180,13 +180,13 @@
 </div>
 <div class="col-lg-3 ml-auto">
 <div class="mb-3">
-<p class="mb-0 font-weight-bold text-white">Address</p>
+<p class="mb-0 font-weight-bold text-black">Address</p>
 <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>
 
-<p class="mb-0 font-weight-bold text-white">Phone</p>
+<p class="mb-0 font-weight-bold text-black">Phone</p>
 <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
 
-<p class="mb-0 font-weight-bold text-white">Email Address</p>
+<p class="mb-0 font-weight-bold text-black">Email Address</p>
 <p class="mb-0"><a href="#">youremail@domain.com</a></p>
 
 </div>
