--- a/services.html
+++ b/services.html
@@ -123,7 +123,7 @@
           <div class="col-md-7">
             <div class="row mb-5">
               <div class="col-12 ">
-                <h2 class="site-section-heading text-center">My Services</h2>
+                <h2 class="site-section-heading text-center text-black">My Services</h2>
               </div>
             </div>
           </div>
@@ -134,7 +134,7 @@
           <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
             <div class="h-100 p-4 p-lg-5 site-block-feature-7">
               <span class="icon flaticon-camera display-3 text-primary mb-4 d-block"></span>
-              <h3 class="text-white h4">Camera</h3>
+              <h3 class="text-black h4">Camera</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
               <p><strong class="font-weight-bold text-primary">$29</strong></p>
             </div>
@@ -142,7 +142,7 @@
           <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
             <div class="h-100 p-4 p-lg-5 site-block-feature-7">
               <span class="icon flaticon-picture display-3 text-primary mb-4 d-block"></span>
-              <h3 class="text-white h4">Wedding Photography</h3>
+              <h3 class="text-black h4">Wedding Photography</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
               <p><strong class="font-weight-bold text-primary">$46</strong></p>
             </div>
@@ -150,7 +150,7 @@
           <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
             <div class="h-100 p-4 p-lg-5 site-block-feature-7">
               <span class="icon flaticon-sheep display-3 text-primary mb-4 d-block"></span>
-              <h3 class="text-white h4">Animal</h3>
+              <h3 class="text-black h4">Animal</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
               <p><strong class="font-weight-bold text-primary">$24</strong></p>
             </div>
@@ -159,7 +159,7 @@
           <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
             <div class="h-100 p-4 p-lg-5 site-block-feature-7">
               <span class="icon flaticon-frame display-3 text-primary mb-4 d-block"></span>
-              <h3 class="text-white h4">Portrait</h3>
+              <h3 class="text-black h4">Portrait</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
               <p><strong class="font-weight-bold text-primary">$40</strong></p>
             </div>
@@ -167,7 +167,7 @@
           <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
             <div class="h-100 p-4 p-lg-5 site-block-feature-7">
               <span class="icon flaticon-eiffel-tower display-3 text-primary mb-4 d-block"></span>
-              <h3 class="text-white h4">Travel</h3>
+              <h3 class="text-black h4">Travel</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
               <p><strong class="font-weight-bold text-primary">$35</strong></p>
             </div>
@@ -175,7 +175,7 @@
           <div class="col-md-6 col-lg-6 col-xl-4 text-center mb-5 mb-lg-5">
             <div class="h-100 p-4 p-lg-5 site-block-feature-7">
               <span class="icon flaticon-video-play display-3 text-primary mb-4 d-block"></span>
-              <h3 class="text-white h4">Video Editing</h3>
+              <h3 class="text-black h4">Video Editing</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum exercitationem quae id dolorum debitis.</p>
               <p><strong class="font-weight-bold text-primary">$15</strong></p>
             </div>
