--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
         <div class="row align-items-center">
 
           <div class="col-6 col-xl-2" data-aos="fade-down">
-            <h1 class="mb-0"><a href="index.html" class="text-black h2 mb-0" style="font-size:1.6rem; font-family:'Montserrat','Arial',sans-serif; letter-spacing:0.05em; font-weight:700;">The Vedic Wedding</a></h1>
+<h1 class="mb-0"><a href="index.html" class="site-logo"><img src="tvwlogo.png" alt="The Vedic Wedding Logo"><span class="sr-only">The Vedic Wedding</span></a></h1>
           </div>
           <div class="col-10 col-md-8 d-none d-xl-block" data-aos="fade-down">
             <nav class="site-navigation position-relative text-right text-lg-center" role="navigation">
