--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+                  <a href="https://www.facebook.com/thevedicwedding" class="pl-0 pr-3" target="_blank" rel="noopener"><span class="icon-facebook"></span></a>
                 </li>
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-pinterest"></span></a>
+                  <a href="https://www.pinterest.com/thevedicwedding" class="pl-3 pr-3" target="_blank" rel="noopener"><span class="icon-pinterest"></span></a>
                 </li>
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-behance"></span></a>
+                  <a href="https://www.behance.net/thevedicwedding" class="pl-3 pr-3" target="_blank" rel="noopener"><span class="icon-behance"></span></a>
                 </li>
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+                  <a href="https://www.instagram.com/thevedicwedding" class="pl-3 pr-3" target="_blank" rel="noopener"><span class="icon-instagram"></span></a>
                 </li>
                 <li>
-                  <a href="#" class="pl-3 pr-3"><span class="icon-youtube-play"></span></a>
+                  <a href="https://www.youtube.com/@thevedicwedding" class="pl-3 pr-3" target="_blank" rel="noopener"><span class="icon-youtube-play"></span></a>
                 </li>
               </ul>
             </div>
