--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <!-- Image Slider Start -->
     <div class="site-blocks-cover overlay" data-aos="fade" id="home-slider" style="padding: 0; background: none;">
       <div class="slide-one-item home-slider owl-carousel">
-        <div class="slide-item" style="background-image: url('images/img_1.jpg'); min-height: 400px; background-size: cover; background-position: center;">
+        <div class="slide-item" style="background-image: url('images/img_1.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center;">
           <div class="container h-100 d-flex align-items-center justify-content-center">
             <div class="col-md-8 text-center" style="background: rgba(0,0,0,0.3); padding: 2rem; border-radius: 10px;">
               <h1 class="mb-2">Welcome to The Vedic Wedding</h1>
@@ -125,10 +125,10 @@
             </div>
           </div>
         </div>
-        <div class="slide-item" style="background-image: url('images/img_2.jpg'); min-height: 400px; background-size: cover; background-position: center;"></div>
-        <div class="slide-item" style="background-image: url('images/img_3.jpg'); min-height: 400px; background-size: cover; background-position: center;"></div>
-        <div class="slide-item" style="background-image: url('images/img_4.jpg'); min-height: 400px; background-size: cover; background-position: center;"></div>
-        <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 400px; background-size: cover; background-position: center;"></div>
+        <div class="slide-item" style="background-image: url('images/img_2.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center;"></div>
+        <div class="slide-item" style="background-image: url('images/img_3.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center;"></div>
+        <div class="slide-item" style="background-image: url('images/img_4.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center;"></div>
+        <div class="slide-item" style="background-image: url('images/img_5.jpg'); min-height: 650px; height: 65vh; background-size: cover; background-position: center;"></div>
       </div>
     </div>
     <!-- Image Slider End -->
@@ -275,7 +275,7 @@
             autoplay: true,
             autoplayTimeout: 3000,
             autoplayHoverPause: false,
-            nav: true,
+            nav: false, // Remove left/right arrows
             dots: true,
             animateOut: 'fadeOut',
             animateIn: 'fadeIn',
